--- a/PayrollReport/Model/Model.csproj
+++ b/PayrollReport/Model/Model.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Position.cs" />
     <Compile Include="PostRank.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Report\ReportLeader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
