--- a/PayrollReport/Model/Model.csproj
+++ b/PayrollReport/Model/Model.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessContext.cs" />
+    <Compile Include="CommonModel.cs" />
     <Compile Include="Payroll.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="PostRank.cs" />
