--- a/PayrollReport/MainUI/App.config
+++ b/PayrollReport/MainUI/App.config
@@ -25,7 +25,7 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="BConnection" connectionString="Data Source=|DataDirectory|/PayrollReportSystem;Pooling=true;FailIfMissing=false"
+    <add name="BConnection" connectionString="Data Source=|DataDirectory|\PayrollReportSystem.db;Pooling=true;FailIfMissing=false"
       providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
 </configuration>
