--- a/PayrollReport/Model/Model.csproj
+++ b/PayrollReport/Model/Model.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Position.cs" />
     <Compile Include="PostRank.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Report\ReportAnnualWage.cs" />
     <Compile Include="Report\ReportDetailed.cs" />
     <Compile Include="Report\ReportPost.cs" />
   </ItemGroup>
