【王姣】 数据库条件查询

--- a/PayrollReport/Model/Model.csproj
+++ b/PayrollReport/Model/Model.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessContext.cs" />
+    <Compile Include="PayrollSearchCondition.cs" />
     <Compile Include="Payroll.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="PostRank.cs" />
