--- a/PayrollReport/Controller/Controller.csproj
+++ b/PayrollReport/Controller/Controller.csproj
@@ -59,6 +59,8 @@
     <Compile Include="ImportTableTwo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchConditionController.cs" />
+    <Compile Include="TableOne\BranchOfficeYear.cs" />
+    <Compile Include="TableOne\BranchOfficeMonth.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Model\Model.csproj">
