--- a/PayrollReport/Controller/Controller.csproj
+++ b/PayrollReport/Controller/Controller.csproj
@@ -61,6 +61,7 @@
     <Compile Include="SearchConditionController.cs" />
     <Compile Include="TableOne\BranchOfficeYear.cs" />
     <Compile Include="TableOne\BranchOfficeMonth.cs" />
+    <Compile Include="TableOne\OfficeMonth.cs" />
     <Compile Include="TableOne\OfficeYear.cs" />
   </ItemGroup>
   <ItemGroup>
