--- a/PayrollReport/MainUI/MainUI.csproj
+++ b/PayrollReport/MainUI/MainUI.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MainUI</RootNamespace>
-    <AssemblyName>MainUI</AssemblyName>
+    <AssemblyName>柳州高速工资系统</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -90,11 +90,11 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainUI.cs">
+    <Compile Include="柳州高速工资系统.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainUI.Designer.cs">
-      <DependentUpon>MainUI.cs</DependentUpon>
+    <Compile Include="柳州高速工资系统.Designer.cs">
+      <DependentUpon>柳州高速工资系统.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -110,8 +110,8 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainUI.resx">
-      <DependentUpon>MainUI.cs</DependentUpon>
+    <EmbeddedResource Include="柳州高速工资系统.resx">
+      <DependentUpon>柳州高速工资系统.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
