--- a/PayrollReport/ExcelImport/ExcelImport.csproj
+++ b/PayrollReport/ExcelImport/ExcelImport.csproj
@@ -67,6 +67,12 @@
     <Compile Include="ImporyHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{6b645896-84cb-4bee-b8f2-faec9c13fb5b}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
